Minor Fixes  - Updated Clipping on Entry List - FIxed Server BUgs

--- a/src/client/components/ListItem/web.css
+++ b/src/client/components/ListItem/web.css
@@ -6,6 +6,14 @@ p.title {
     font-size: 32px;
     margin: 0;
     color: #333333;
+    max-width:100%;
+
+    overflow: hidden;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    height: 32px;
+
 }
 
 p.caption {
@@ -13,4 +21,5 @@ p.caption {
     font-size: 16px;
     margin: 0;
     color: #333333;
+
 }
